# strs

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
strs/: __main__.py  base.py  cli.py  cmd.py  commands.py  constants.py  decorators.py  input.py
strs/commands/: __init__.py  more.py
strs/commands/string/: __init__.py  analyze.py  cmd.py  parse.py  transform.py  validate.py
strs/core/: __init__.py  base.py  constants.py  decorators.py  input.py  process.py  types.py
strs/plugins/: __init__.py  default.py
