[metadata]
# name = attr: strs.NAME
# description = attr: strs.DESCRIPTION
# license = attr: strs.__license__
#  version = attr: strs.__version__
  license_file = LICENSE
  long_description = file: README.md
  long_description_content_type = text/markdown
  classifiers =
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.10

[options]
  zip_safe = True
  include_package_data = True
#  url = attr: strs.HOMEPAGE
# project_urls = attr: strs.PROJECT_URLS
# entry_points = attr: strs.ENTRY_POINTS
# packages = strs
# install_requires = file: requirements.txt
# package_data = attr: strs.PKG_DATA
